# openapi.yaml
@@ -250,6 +250,50 @@
             "title": "Expires At",
             "type": "string"
           },
+          "geo_city": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Geo City"
+          },
+          "geo_country": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Geo Country"
+          },
+          "geo_display": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Geo Display"
+          },
+          "geo_region": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Geo Region"
+          },
           "ip_address": {
             "anyOf": [
               {
